Reglage bug itineraire

--- a/itineraire.html
+++ b/itineraire.html
@@ -13,9 +13,9 @@
 <body>
     <div class="itineraire-grid">
         <div class="grille-etapes">
-            <!-- <div class="download-gpx">
+            <div class="download-gpx">
                 <a href=""><i class="fas fa-file-download"></i> TÉLÉCHARGER LE .GPX DE LA LA VÉLOMARITIME / EUROVELO 5</a>
-            </div> -->
+            </div>
 
         </div>
         <div class="container-map">
