Modif h1 section 'La douceur du Nord'

--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
             </ul>
         </article>
         <article class="bloc_conteneur">
-            <img src="img/landscape.jpg" alt="landscape" id="landscape">
+            <img src="img/landscape.jpg" alt="landscape" class="landscape">
             <div id="Experiences">
                 <h2>
                     Ils l'ont fait
@@ -122,7 +122,7 @@
             </section>
         </article>
         <article class="bloc_conteneur">
-            <img src="img/landscape2.jpg" alt="landscape" id="landscape">
+            <img src="img/landscape2.jpg" alt="landscape" class="landscape">
             <div id="PartezEnVoyage">
                 <h2>
                     Partez en voyage, ils organisent tout pour vous !
