Modifs hiérarchie titres / Modif police titres

--- a/home.html
+++ b/home.html
@@ -8,14 +8,17 @@
     <title>Accueil</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <main>
         <article class="BlocsReduits" id="BlocPresentationCarte">
             <section id="presentation">
-                <h2>
+                <h1>
                     La VéloCharbon.
-                </h2>
+                </h1>
                 <p>
                     La VéloCharbon est un itinéraire qui part de Calais, jusqu’à Lille et la Belgique en passant par le marais Audomarois. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. 
                 </p>
@@ -57,9 +60,9 @@
             <div id="map"></div>
         </article>
         <article id="TrouverVelo"  class="BlocsReduits">
-            <h2>
+            <h1>
                 Trouver mon Accueil vélo
-            </h2>
+            </h1>
             <p>
                 Accueil Vélo est une marque qui garantit des services de qualité auprès des cyclistes le long de l'itinéraire
             </p>
@@ -85,9 +88,9 @@
         <article class="bloc_conteneur">
             <img src="img/landscape.jpg" alt="landscape" class="landscape">
             <div id="Experiences">
-                <h2>
+                <h1>
                     Ils l'ont fait
-                </h2>
+                </h1>
                 <p>
                     Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
                 </p>
@@ -99,9 +102,9 @@
             </div>
         </article>
         <article class="BlocsContenuCentre BlocsReduits">
-            <h2>
+            <h1>
                 Les derniers avis publiés !
-            </h2>
+            </h1>
             <p>
                 Les avis et commentaires de voyageurs à vélo sur nos parcours.<br>
                 N'hésitez pas à déposer le votre sur les tracés que vous avez déjà parcourus !
@@ -112,9 +115,9 @@
             
         </article>
         <article class="BlocsContenuCentre BlocsReduits">
-            <h2>
+            <h1>
                 La douceur du Nord à portée de roues !
-            </h2>
+            </h1>
             <p>
                 Idées week-end, nouveautés et tutos pour s'élancer dans une aventure à vélo.
             </p>
@@ -124,9 +127,9 @@
         <article class="bloc_conteneur">
             <img src="img/landscape3.jpg" alt="landscape" class="landscape">
             <div id="PartezEnVoyage">
-                <h2>
+                <h1>
                     Partez en voyage, ils organisent tout pour vous !
-                </h2>
+                </h1>
                 <p>
                     Besoin d'aide pour organiser vos vacances ? Premier voyage à vélo ?
                     Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
