Ajout API page article

--- a/article.html
+++ b/article.html
@@ -27,67 +27,7 @@
         <a href="#">ajouter à un carnet de voyage</a>
       </div>
     </section>
-    <section>
-      <div class="article_content">
-        <img src="img/landscape.jpg" alt="image" />
-        <div class="content">
-          <h3>Lorem ipsum, dolor sit</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            atque doloribus eligendi sunt voluptatum laborum dolor, aliquid
-            suscipit, fuga error optio. Consectetur laudantium perspiciatis
-            quasi iure ipsam, enim ab ea. Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Quis voluptatem, praesentium non in
-            facere deserunt repellendus, necessitatibus magnam mollitia, omnis
-            repellat exercitationem. Est quidem fuga consequatur beatae dolor
-            saepe porro. Laborum quasi eaque veniam ullam, aspernatur
-            perspiciatis necessitatibus assumenda blanditiis nobis voluptatem
-            delectus asperiores cum porro esse id distinctio incidunt odio unde
-            similique at error! Quidem repellendus aspernatur nobis velit?
-          </p>
-        </div>
-      </div>
-      <div class="article_content2">
-        <div class="content2">
-          <h3>Lorem ipsum, dolor sit</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            atque doloribus eligendi sunt voluptatum laborum dolor, aliquid
-            suscipit, fuga error optio. Consectetur laudantium perspiciatis
-            quasi iure ipsam, enim ab ea.
-          </p>
-        </div>
-        <img src="img/landscape.jpg" alt="image" />
-      </div>
-      <div class="article_content">
-        <img src="img/landscape.jpg" alt="image" />
-        <div class="content">
-          <h3>Lorem ipsum, dolor sit</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            atque doloribus eligendi sunt voluptatum laborum dolor, aliquid
-            suscipit, fuga error optio. Consectetur laudantium perspiciatis
-            quasi iure ipsam, enim ab ea. Lorem ipsum dolor sit amet
-            consectetur, adipisicing elit. Quis voluptatem, praesentium non in
-            facere deserunt repellendus, necessitatibus magnam mollitia, omnis
-            repellat exercitationem. Est quidem fuga consequatur beatae dolor
-            saepe porro. Laborum quasi eaque veniam ullam, aspernatur
-            perspiciatis necessitatibus assumenda blanditiis nobis voluptatem
-            delectus asperiores cum porro esse id distinctio incidunt odio unde
-            similique at error! Quidem repellendus aspernatur nobis velit?
-          </p>
-        </div>
-      </div>
-
-      <div class="foot">
-        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit !</h1>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Exercitationem praesentium ipsa sed laborum possimus necessitatibus
-          delectus quae odio. Ducimus unde labore corrupti numquam magni hic
-          nemo maiores impedit officiis veniam.
-        </p>
-      </div>
-    </section>
+    <section class="article"></section>
+    <script src="js/API/article.js"></script>
   </body>
 </html>
