Header page témoignage et article

--- a/article.html
+++ b/article.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="scss/main.css" />
     <title>article</title>
   </head>
   <body>
+    <header class="banniere2">
+      <div class="ban-content2">
+        <h1>Lorem ipsum dolor,</h1>
+        <a href="#fleche2"><i class="fas fa-long-arrow-alt-down"></i></a>
+      </div>
+    </header>
     <section>
       <div class="title_article">
-        <h1>
+        <h1 id="fleche2">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores,
           ducimus amet. Magni tempora est hic autem, architecto laudantium
           reprehenderit.
