--- a/nav.html
+++ b/nav.html
@@ -54,37 +54,15 @@
                 <a href="news.html">NEWS</a>
             </li>
         </ul>
+
+        <ul>
+          <li>
+            <img src="img/logo.png" alt="" class="hamburger">
+          </li>
+        </ul>
       </nav>
 
-      <div class="slideshow">
-        <input
-          type="radio"
-          id="button-1"
-          name="radio-set"
-          class="selecteur-1"
-          checked="checked"
-        />
-        <label for="button-1" class="button-label-1"></label>
-
-        <input
-          type="radio"
-          id="button-2"
-          name="radio-set"
-          class="selecteur-2"
-        />
-        <label for="button-2" class="button-label-2"></label>
-
-        <input
-          type="radio"
-          id="button-3"
-          name="radio-set"
-          class="selecteur-3"
-        />
-        <label for="button-3" class="button-label-3"></label>
-
-        <label for="button-1" class="sp-arrow sp-a1"></label>
-        <label for="button-2" class="sp-arrow sp-a2"></label>
-        <label for="button-3" class="sp-arrow sp-a3"></label>
+      
 
         <div class="contenu">
           <ul class="slider clearfix">
