--- a/nav.html
+++ b/nav.html
@@ -38,19 +38,19 @@
         </ul>
 
         <ul class="subnav">
-            <li>
+            <li id="enfant1">
                <a href="home.html"><img src="img/logo.png" alt=""></a>
             </li>
-            <li>
+            <li id="enfant2">
                 <a href="itineraire.html">L'ITINÉRAIRE</a>
             </li>
-            <li>
+            <li id="enfant3">
                 <a href="temoignage.html">TÉMOIGNAGES</a>
             </li>
-            <li>
+            <li id="enfant4">
                 <a href="infos-pratiques.html">INFOS PRATIQUES</a>
             </li>
-            <li>
+            <li id="enfant5">
                 <a href="news.html">NEWS</a>
             </li>
         </ul>
