--- a/nav.html
+++ b/nav.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
 
-        <ul class="subnav">
+        <ul class="subnav" id="menu_active"> 
             <li id="enfant1">
                <a href="home.html"><img src="img/logo.png" alt=""></a>
             </li>
@@ -55,12 +55,7 @@
             </li>
         </ul>
 
-        <ul>
-          <li>
-            <img src="img/logo.png" alt="" class="hamburger">
-          </li>
-        </ul>
-      </nav>
+        <div id="hamburger" class="inactive">&#9776;</div>
 
       
 
@@ -85,6 +80,6 @@
     </header>
     
 
-    <script src="js/header.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
