--- a/nav.html
+++ b/nav.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
 
-        <ul class="subnav" id="menu_active"> 
+        <ul class="subnav" id="menu"> 
             <li id="enfant1">
                <a href="home.html"><img src="img/logo.png" alt=""></a>
             </li>
