Ajout ressources présentation / Ajout nav dans page Home

--- a/home.html
+++ b/home.html
@@ -12,7 +12,65 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
 </head>
-<body>
+<body>    
+    <header class="head">
+        <nav>
+            <ul class="nav">
+                <li>
+                <a href="https://www.instagram.com/?hl=fr" target="_blank"
+                    ><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                    ><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                <a href="https://www.youtube.com/" target="_blank"
+                    ><i class="fab fa-youtube"></i></a>
+                </li>
+                <li class="mail">
+                    S'abonner à la newsletter
+                    <input type="email" name="news" id="mail">
+                    <input type="submit" value="JE M'INSCRIS" id="submit">
+                </li>
+            </ul>
+            <ul class="subnav" id="menu"> 
+                <li id="enfant1">
+                    <a href="home.html"><img src="img/logo.png" alt=""></a>
+                </li>
+                <li id="enfant2">
+                    <a href="itineraire.html">L'ITINÉRAIRE</a>
+                </li>
+                <li id="enfant3">
+                    <a href="temoignage.html">TÉMOIGNAGES</a>
+                </li>
+                <li id="enfant4">
+                    <a href="infos-pratiques.html">INFOS PRATIQUES</a>
+                </li>
+                <li id="enfant5">
+                    <a href="news.html">NEWS</a>
+                </li>
+            </ul>
+            <div id="hamburger" class="inactive">&#9776;</div>
+            <div class="contenu">
+                <ul class="slider clearfix">
+                <li>
+                    <img
+                    src="img/B9724016803Z.1_20200716164949_000+GD1GB7220.1-0.jpg"
+                    alt="image01"
+                    />
+                </li>
+                <li>
+                    <img
+                    src="img/patrimoine-remarquable_news_image_top.jpg"
+                    alt="image02"
+                    />
+                </li>
+                <li><img src="img/St_omer_cathedrale_ND.jpg" alt="image03" /></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <main>
         <article class="BlocsReduits" id="BlocPresentationCarte">
             <section id="presentation">
