--- a/home.html
+++ b/home.html
@@ -199,7 +199,60 @@
                 </button>
             </div>
         </article>
-
+        <footer>
+            <div id="logos_footer">
+                <img src="img/Velodyssee.png" alt="logo_velodyssee" id="velodysse_footer">
+                <ul>
+                    <img src="img/insta.png" alt="instagram" class="social_media_footer">
+                    <img src="img/youtube.png" alt="youtube" class="social_media_footer">
+                    <img src="img/fb.png" alt="facebook" class="social_media_footer">
+                </ul>
+            </div>
+            <div id="footer_bottom">
+                <div id="footer_text">
+                    <h1>
+                        Qui sommes-nous ? 
+                    </h1>
+                    <p>
+                        La Vélodyssée est un projet porté collectivement par 3 Régions et 9 Départements réunis autour d'une ambition commune : positionner La Vélodyssée comme un itinéraire d'excellence du tourisme à vélo en France et à l'étranger.
+                    </p>
+                </div>
+                <div id="footer_buttons">
+                    <button id="more">
+                        En savoir plus
+                    </button>
+                    <button id="contact_us">
+                        Nous contacter
+                    </button>
+                </div>
+            </div>
+            <div id="footer2">
+                <div id="mentions_legales">
+                    <section id="mentions_legales_liste">
+                        <ul>
+                            <li>
+                                Mentions légales
+                            </li>
+                            <li>
+                                Politique de confidentialité
+                            </li>
+                            <li>
+                                Presse
+                            </li>
+                            <li>
+                                Gestion des cookies
+                            </li>
+                        </ul>
+                    </section>
+                    <section id="real_by">
+                        <p>
+                            Réalisé par BGJJT Team
+                        </p>
+                        <img src="img/muscle.png" alt="muscles">
+                    </section>
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.7.0/gpx.min.js"></script>
