--- a/home.html
+++ b/home.html
@@ -155,7 +155,7 @@
                     <section id="experiences_photos" class="temoignage_conteneur">
                     </section>
                     <button class="BoutonTransparent">
-                        <a href=temoignage.html>Tous les témoignages</a>
+                        Tous les témoignages
                     </button>
                 </div>
             </article>
@@ -195,7 +195,7 @@
                     <section id="PartezEnVoyage_photos">
                     </section>
                     <button class="BoutonTransparent">
-                        <a href=infos-pratiques.html>Tous les séjours</a>
+                        Tous les séjours
                     </button>
                 </div>
             </article>
