--- a/nav.html
+++ b/nav.html
@@ -48,7 +48,7 @@
                 <a href="temoignage.html">TÉMOIGNAGES</a>
             </li>
             <li id="enfant4">
-                <a href="infos-pratiques.html">INFOS PRATIQUES</a>
+                <a href="news.html">INFOS PRATIQUES</a>
             </li>
             <li id="enfant5">
                 <a href="news.html">NEWS</a>
@@ -76,7 +76,7 @@
             <li><img src="img/St_omer_cathedrale_ND.jpg" alt="image03" /></li>
           </ul>
         </div>
-      </div>
+    </nav>
     </header>
     
 
