modif logos footer

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,8 @@
 <footer>
     <div id="logos_footer">
-        <img src="img/Velodyssee.png" alt="logo_velodyssee" id="velodysse_footer">
+        <div id="logo_ensemble">
+            <img src="img/logo.png" alt="logo_velodyssee" id="velodysse_footer"><img src="img/ev-5.svg" alt="eurovelo5" id="eurovelo5">
+        </div>
         <div>
             <img src="img/insta.png" alt="instagram" class="social_media_footer">
             <img src="img/youtube.png" alt="youtube" class="social_media_footer">
@@ -19,7 +21,7 @@
         <div id="footer_buttons">
             <button id="more">
                 En savoir plus
-            </button>
+            </button>   
             <button id="contact_us">
                 Nous contacter
             </button>
