--- a/home.html
+++ b/home.html
@@ -201,7 +201,9 @@
             </article>
             <footer>
                 <div id="logos_footer">
-                    <img src="img/Velodyssee.png" alt="logo_velodyssee" id="velodysse_footer">
+                    <div id="logo_ensemble">
+                        <img src="img/logo.png" alt="logo_velodyssee" id="velodysse_footer"><img src="img/ev-5.svg" alt="eurovelo5" id="eurovelo5">
+                    </div>
                     <div>
                         <img src="img/insta.png" alt="instagram" class="social_media_footer">
                         <img src="img/youtube.png" alt="youtube" class="social_media_footer">
@@ -220,7 +222,7 @@
                     <div id="footer_buttons">
                         <button id="more">
                             En savoir plus
-                        </button>
+                        </button>   
                         <button id="contact_us">
                             Nous contacter
                         </button>
