--- a/temoignage.html
+++ b/temoignage.html
@@ -12,7 +12,7 @@
     <title>temoignages</title>
   </head>
   <body>
-    <header class="banniere">
+    <header class="banniere3">
       <div class="ban-content">
         <h1>Ils l'ont fait</h1>
         <a href="#fleche"><i class="fas fa-long-arrow-alt-down"></i></a>
